--- a/orders/templates/layout.html
+++ b/orders/templates/layout.html
@@ -29,6 +29,7 @@
 		<!--[if lt IE 9]>
 		<script type="text/javascript" src="../../assets/js/libs/utils/html5shiv.js?1403934957"></script>
 		<script type="text/javascript" src="../../assets/js/libs/utils/respond.min.js?1403934956"></script>
+		<script type="text/javascript" src="{% static 'js/core/status_changer.js' %}"></script>
 		<![endif]-->
 	</head>
 	<body class="menubar-pin menubar-hoverable header-fixed "> <!--max sidemenu: menubar-pin -->
