--- a/orders/templates/new_product.html
+++ b/orders/templates/new_product.html
@@ -3,8 +3,20 @@
 {% load widget_tweaks %}
 
 {% block title %} Add Product {% endblock %}
-
+{% load staticfiles %}
 {% block body %}
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+$('#Submit').click(function() {alert('in');
+    var productVal = $('#name').find('input[name="product_name"]').val();
+    $.post("{% static 'php/checkproduct.php' %}", {'productname' : productVal}, function(data) {
+    	 console.log('data: ', data);
+        if(data=='exist') return false;
+        else $('#form1').submit();
+    });
+});});
+</script>
 
                 <section>
 					<div class="section-body">
@@ -27,7 +39,7 @@
 											<div class="row">
 												<div class="col-sm-6">
 													<header>Product Info</header>
-													<div class="form-group floating-label">
+													<div class="form-group floating-label" id="name">
 														{{ product_form.product_name | add_class:'form-control' }}
 														<label for="regular2">Product Name</label>
 													</div>
@@ -43,7 +55,7 @@
 												<div class="col-md-12">
 													<hr>
 													<div class="card-actionbar-row">
-														<input type="submit" class="btn btn-flat btn-primary ink-reaction" value="SUBMIT">
+														<input type="submit" class="btn btn-flat btn-primary ink-reaction" value="SUBMIT" name="Submit" id="Submit">
 													</div>
 												</div>
 											</div>
